--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Eventiators</string>
-    <string name="title_activity_home__screen__drawer">Home_Screen_Drawer</string>
+    <string name="title_activity_nav_act_home">nav_act_home</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
